--- a/src/components/polygonGrid/polygonGrid.module.css
+++ b/src/components/polygonGrid/polygonGrid.module.css
@@ -1,29 +1,22 @@
-#polygonGrid {
-  margin-top: 25px;
-  items: center;
-}
-
-#oddRow {
-  display: flex;
-  flex-direction: row;
-}
-#evenRow {
-  margin: -25px 50px;
-  display: flex;
-  flex-direction: row;
-}
-
-#polygon {
-  background-color: #ff5000;
-  clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+.container {
+  width: 100vw;
+  height: 100vh;
+  background: #222222;
   position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100px;
-  aspect-ratio: 1;
+  overflow: hidden;
 }
 
-#polygon:hover {
-  background-color: #ffa000;
+.hexagon {
+  width: 100px;
+  height: 100px;
+  background: #ff6600;
+  clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+  position: absolute;
+  cursor: grab;
+  transition: transform 0.2s ease;
+}
+
+.hexagon:active,
+.hexagon:hover {
+  background: #ffc100;
 }
