--- a/src/components/polygonGrid/polygonGrid.module.css
+++ b/src/components/polygonGrid/polygonGrid.module.css
@@ -1,15 +1,24 @@
+body {
+  background-image: url("/xp.jpg");
+  background-repeat: repeat;
+  font-family: "Times-Italic";
+}
+
 .container {
   width: 100vw;
   height: 100vh;
-  background: #222222;
   position: relative;
   overflow: hidden;
 }
 
 .hexagon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  user-select: none;
   width: 100px;
   height: 100px;
-  background: #ff6600;
+  background: #ff00ff;
   clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
   position: absolute;
   cursor: grab;
@@ -19,4 +28,67 @@
 .hexagon:active,
 .hexagon:hover {
   background: #ffc100;
+}
+
+.component {
+  display: flex;
+  flex-direction: column;
+  background-color: #00000060;
+  backdrop-filter: blur(3px);
+  padding: 10px;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  border-radius: 20px;
+}
+
+.playBtnContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 10px;
+  margin: 0;
+}
+
+.playButton {
+  background-color: #00000000;
+  border: none;
+  margin: 0;
+  color: #ffffff;
+}
+
+.title {
+  font-size: 24px;
+  margin: 10px 0 0 0;
+}
+
+.subTitle {
+  font-size: 18px;
+  margin: 0 0 10px 0;
+}
+
+.nowPlaying {
+  position: absolute;
+  background-color: #000000c0;
+  color: red;
+  font-size: 20px;
+  padding: 0 5px;
+  margin: 0;
+}
+
+.playButtonIcon {
+  width: 50px;
+}
+
+input[type="range"] {
+  background-color: #27ae60;
+}
+
+.time {
+  margin: 0 auto;
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  color: #828282;
+  font-size: smaller;
 }
